# CUDAGPT

./: CMakeLists.txt
include/: block_size.h  kernel.h
include/model/: MHA.h  decoder.h  linear.h
include/ops/: attention.h  bmm.h  dotProd.h  futureMask.h  layernorm.h  matAdd.h  matMul.h  matScale.h  relu.h  softmax.h  transpose.h  vectAdd.h
src/: decoder.cu  kernel.cu  main.cu  matmul.cu  softmax.cu  tensor.cu
src/model/: MHA.cu  linear.cu
src/ops/: attention.cu  bmm.cu  dotProd.cu  futureMask.cu  layernorm.cu  matAdd.cu  matMul.cu  matScale.cu  relu.cu  softmax.cu  transpose.cu  vectAdd.cu
